list.getLast is fixed